--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -218,11 +218,11 @@
       <div class="flex_other_articles">
       <h3 class="title">More in <%= link_to(@post.meta_title, Category.find(@post.category_id)) %></h3>
       <div class="contain_articles">
-        <% Post.approved.where(meta_title: @post.meta_title).each do |post| %>
+        <% Post.approved.where(meta_title: @post.meta_title)[0..9].each do |post| %>
           <div class="one_article">
              <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
             <div class="paragraph">
-              <p><%= link_to(post.title.truncate_words(10), post) %></p>
+              <p><%= link_to(post.title.truncate_words(20), post) %></p>
             </div>
           </div>
       <% end %>
