--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,7 +41,7 @@
   <header id="post_title_show">
     <h1 class="title_article_show"><%= @post.title %></h1>
     <% if @post.category_id != nil %>
-      <h3><%= link_to(@post.meta_title, Category.find(@post.category_id)) %></h3>
+      <h3><%= link_to(@post.meta_title, Category.where(name: @post.meta_title).first) %></h3>
     <% else %>
       <h3><%= @post.meta_title %></h3>
     <% end %>
@@ -216,7 +216,7 @@
     <a href="/apply"><img id="apply_image" src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
     <div class="articles">
       <div class="flex_other_articles">
-      <h3 class="title">Most Read in <%= link_to(@post.meta_title, Category.find(@post.category_id)) %></h3>
+      <h3 class="title">Most Read in <%= link_to(@post.meta_title, Category.where(name: @post.meta_title).first) %></h3>
       <div class="contain_articles">
         <% Post.approved.order("post_impressions desc").where(meta_title: @post.meta_title)[0..9].each do |post| %>
           <div class="one_article">
