--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -224,9 +224,44 @@ $gray:  #2a2a2a;
   }
 }
 
-@media (max-width: 1075px) {
-   .post_apply, .apply_link {
-     display: none;
+@media (max-width: 1200px) {
+   .flex_wrapper_content {
+     flex-direction: column;
+     .post_apply {
+       flex-direction: row-reverse;
+       flex-grow: 1;
+       max-width: 100%;
+       padding: 0;
+       h3 {
+         margin-top: 0;
+         font-size: 40px;
+       }
+       #apply_link {
+         max-height: 231px;
+       }
+       #apply_link {
+         margin-top: 55px;
+         #apply_image {
+           min-width: 300px;
+         }
+       }
+       .articles {
+         margin-right: 30px;
+         .contain_articles {
+           padding: 0 10px;
+           img {
+             width: 200px;
+             height: auto;
+           }
+           p {
+             font-size: 20px;
+             line-height: 25px;
+             margin: 0px 10px;
+             font-family: "Playfair Display";
+           }
+         }
+       }
+     }
    }
    .skinny {
      margin-left: 20px;
@@ -237,6 +272,46 @@ $gray:  #2a2a2a;
        }
      }
    }
+}
+
+@media (max-width: 900px) {
+  #mce-EMAIL {
+    min-width: 100% !important;
+    max-width: 100% !important;
+  }
+  .post_apply {
+    flex-direction: column-reverse !important;
+    h3 {
+      font-size: 30px !important;
+    }
+    .articles {
+      margin: 0 !important;
+    }
+    #apply_link {
+      width: 100% !important;
+      margin: 20px 0 !important;
+      max-height: 100% !important;
+      a {
+        display:block;
+        margin: auto;
+        max-width: 480px;
+      }
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .contain_articles {
+    padding: 0 !important;
+    img {
+      width: 130px !important;
+    }
+    p {
+      font-size: 15px !important;
+      line-height: 18px !important;
+      margin-right: 0 !important;
+    }
+  }
 }
 
 @media (max-width: 980px) {
@@ -267,8 +342,8 @@ $gray:  #2a2a2a;
   }
   .button {
     height: 30px !important;
-    padding: 0 !important;
-    width: 60px !important;
+    padding: 0;
+    width: 60px;
     font-size: 12px !important;
   }
   .parentflex {
@@ -328,7 +403,6 @@ $gray:  #2a2a2a;
           overflow: hidden;
           white-space: nowrap;
           color: white;
-          text-overflow: ellipsis;
 
           a {
             width: 50px;
