--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -111,6 +111,7 @@
         <div class="flex--column--footer">
           <a href="/" class="copyright">The Teen Magazine</a>
           <a href="/about-us">About Us</a>
+          <a href="/apply">Write For Our Magazine</a>
           <a href="/privacy-policy">Privacy Policy</a>
         </div>
         <nav>
