--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -5,7 +5,7 @@
     </iframe>
     <br />
     <p>We are an online magazine written for teens by teens! Founded in 2017, The Teen Magazine started as a blog with a few writers. Since then, it has grown into an international online magazine with over 150 writers from around the world.
-      Today The Teen Magazine gives aspiring journalists a platform to publish and launch their careers as writers.</p>
+      Today The Teen Magazine gives aspiring journalists a platform to publish and covers topics such as social issues, news, entertainment, fashion, advice, and more!</p>
       <div class="signupdiv signup_full">
         <div class="container">
           <div class="exclusive-offer">
@@ -41,7 +41,7 @@
         </div>
       </div>
     <br />
-    <p>Stick around to read about social impact, news, celebrities, advice, and so much more! Go to <%= link_to("The Teen Magazine", root_path) %></p>
+    <p>Stick around to read about social issues, news, fashion, and so much more! Go to <%= link_to("The Teen Magazine", root_path) %></p>
     <div class="social-media-subscribe">
       <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
       <a href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
