--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -64,7 +64,7 @@
     </div>
     <br />
     <div class="read_more_button">
-      <a href="/">Read More</a>
+      <a href="/">Read More!</a>
     </div>
     <br />
   </div>
