--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -39,7 +39,7 @@
         </div>
       </div>
     <br />
-    <p>We are an online magazine written for teens by teens! We started in 2017 as a small blog with only a few writers, but since then, The Teen Magazine has grown into an international online magazine with over 150 writers from around the world!
+    <p>The Teen Magazine is an online magazine written for teens by teens! We started in 2017 as a small blog with only a few writers, but since then, The Teen Magazine has grown into an international online magazine with over 150 writers from around the world!
       Today The Teen Magazine gives aspiring journalists a platform to publish and covers topics such as social issues, news, entertainment, fashion, advice, and more.</p>
     <div class="social-media-subscribe">
       <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
@@ -51,12 +51,12 @@
     <div class="flex--welcome">
       <div class="flex-1">
         <div class="beauty--section">
-          <% Post.approved[1..3].each do |post_academics| %>
+          <% @posts_approved[1..3].each do |post| %>
             <div class="one_beauty_article">
-              <%=link_to(image_tag(post_academics.thumbnail.url(:large2), alt: post_academics.title), post_academics )%>
-              <h1><%= link_to post_academics.title, post_academics %></h1>
-              <p><%= post_academics.created_at.strftime("%A, %b %d")%></p>
-              <p class="meta"><%= post_academics.meta_description.truncate_words(15) %></p>
+              <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
+              <h1><%= link_to post.title, post %></h1>
+              <p><%= post.created_at.strftime("%A, %b %d")%></p>
+              <p class="meta"><%= post.meta_description.truncate_words(15) %></p>
             </div>
           <% end %>
         </div>
