--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -191,7 +191,11 @@
       margin-bottom: 10px;
     }
 
-    h2, a {
+    h2 {
+      margin: 0;
+    }
+
+    h2 a {
       margin: 0;
       font-size: 30px;
       text-decoration: none;
