--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -603,6 +603,9 @@ body {
     margin: .5em 0 .3em 0;
     display: flex;
     flex-direction: row;
+    a {
+      margin-left: 5px;
+    }
   }
 
   a {
@@ -864,7 +867,7 @@ hr {
     width: fit-content;
     margin: 0 auto;
     .fa {
-      margin: 0 20px 20px 0;
+      margin: 0 10px 20px 10px;
     }
   }
 
