--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -13,6 +13,8 @@
     <meta property="og:description"        content="<%= @post.meta_description %>" />
     <meta property="og:image"              content="https:<%= @post.thumbnail.url(:large) %>" />
     <meta property="og:image:url"          content="https:<%= @post.thumbnail.url(:large) %>" />
+    <meta property="og:image:width" content="450"/>
+    <meta property="og:image:height" content="298"/>
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@theteenmagazin_">
     <meta name="twitter:title" content="<%= @post.title %>">
