--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -11,8 +11,8 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%= @post.title %>" />
     <meta property="og:description"        content="<%= @post.meta_description %>" />
-    <meta property="og:image"              content="https:<%= @post.thumbnail.url(:large) %>" />
-    <meta property="og:image:url"          content="https:<%= @post.thumbnail.url(:large) %>" />
+    <meta property="og:image"              content="https:<%= @post.thumbnail.url %>" />
+    <meta property="og:image:url"          content="https:<%= @post.thumbnail.url %>" />
     <meta property="og:image:width" content="450"/>
     <meta property="og:image:height" content="298"/>
     <meta name="twitter:card" content="summary_large_image">
