--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -11,9 +11,11 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="<%= @post.title %>" />
     <meta property="og:description"        content="<%= @post.meta_description %>" />
-    <meta property="og:image"              content="https:<%= @post.thumbnail.url(:large2) %>" />
-    <meta property="og:image:secure_url"   content="https:<%= @post.thumbnail.url(:large2) %>" />
+    <meta property="og:image"              content="http:<%= @post.thumbnail.url %>" />
+    <meta property="og:image:url"          content="http:<%= @post.thumbnail.url %>" />
     <meta property="og:image:alt"          content="<%= @post.title %>" />
+    <meta property="article:publisher" content="https://www.facebook.com/theteenmagazinee" />
+    <meta property="og:site_name" content="The Teen Magazine" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@theteenmagazin_">
     <meta name="twitter:title" content="<%= @post.title %>">
