--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -135,12 +135,14 @@
                <% end %>
                <div class="info">
                <h2 style="margin-bottom: 5px;">
-               <% if (user.first_name != "" && user.first_name !=nil) %>
-                 <%= user.first_name %>
-               <% end %>
-               <% if (user.last_name != "" && user.last_name!= nil) %>
-                 <%= user.last_name %>
-               <% end %>
+               <% @name =
+                 if (user.first_name != "" && user.first_name !=nil)
+                   user.first_name
+                 end
+                 if (user.last_name != "" && user.last_name!= nil)
+                   @name = @name + " " + user.last_name
+                 end %>
+               <%= link_to(@name, user) %>
                </h2>
                <% if user.editor? %>
                  <span class="editor_status">
