--- a/scss/application.css-min.css
+++ b/scss/application.css-min.css
@@ -7,7 +7,8 @@ body {
 .skinny_wrapper {
   width: 80%;
   max-width: 760px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .wrapper {
   width: 90%;
