--- a/app/views/users/partials/_welcome.html.erb
+++ b/app/views/users/partials/_welcome.html.erb
@@ -1,4 +1,3 @@
-<% @page = "your_profile" %>
 <div class="stair_step">
   <span class="progress">◦<p>Welcome</p></span>
   <span>◦<p>Your Profile</p></span>
@@ -10,5 +9,45 @@
 </div>
 <div class="onboarding_page_container">
   <div id="onboarding_page">
-    <p>Hello! We are so excited that you are a part of our writer team. We can't wait to help you get started.
-    If you haven't done so already, please join the Facebook group.</p>
+    <h3>We grow as writers, as influencers, as leaders, together</h3>
+    <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
+      inspire and support each other into becoming part of the next generation of
+      female leaders.</p>
+    <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
+    <p style="margin-top: 8px; font-family: 'Playfair Display'"><i>❝ Throughout human history, our greatest leaders and thinkers have used
+      the power of words to transform our emotions, to enlist us in their causes, and to
+      shape the course of destiny. Words can not only create emotions, they create actions.
+      And from our actions flow the results of our lives. ❞
+      <span style="font-size: 12px;">- Tony Robbins</span></i>
+    </p>
+    <h5>What to Expect: </h5>
+      <p>The Teen Magazine's writer community will give you the guidence and experience necessary to launch your career in the
+        journalism and blogging world. As a writer for The Teen Magazine, you will get the opportunity to:
+        <ul>
+          <li>
+            Pitch article topics and get published in an international online magazine
+          </li>
+          <li>
+            Gain applicable experience and training in the editorial industry
+          </li>
+          <li>
+            Be paired with a mentor who can give you feedback and guidence
+          </li>
+          <li>
+            Interview successful people and work with brands
+          </li>
+          <li>
+            Learn from and network with our talented writer community
+          </li>
+          <li>
+            Apply for other positions and internships within The Teen Magazine
+          </li>
+        </ul>
+        <p>
+        Once you've gone through the training and your first article is published, you will have the option of being paired with a mentor.
+        If you haven't done so already, please ask to join the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>. It is very important that you
+        do so in order to be an active member in our writer community.
+        </p>
+      </div>
+      <%= link_to "Next", onboarding_path(page: "your_profile"), :id => "onboarding_button" %>
+    </div>
